--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ body {
 .address .link {
   color: var(--address-text-color);
   font-size: 14px;
+  font-style: normal;
   line-height: 1.7;
 }
 .address .link:hover,
@@ -61,6 +62,7 @@ body {
 .address-text {
   color: var(--another-text-color);
   font-size: 14px;
+  font-style: normal;
   line-height: 1.7;
 }
 
